--- a/2-preprocessing.ipynb
+++ b/2-preprocessing.ipynb
@@ -9,8 +9,9 @@
     "# Librairies\n",
     "import numpy as np # Matrix calculations\n",
     "import pandas as pd # Data structures\n",
-    "import matplotlib.pyplot as plt # Graphics\n",
-    "import re # regular expressions"
+    "import re # regular expressions\n",
+    "import csv\n",
+    "import json"
    ]
   },
   {
@@ -173,10 +174,114 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Only Keep last year\n",
     "def joinYear(year):\n",
-    "    return \",\".join(year)\n",
+    "    return year[-1]\n",
     "\n",
     "imports_df['Year'] = imports_df['Year'].apply(joinYear)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Init a dict that will contain the total value of arms import per year per country\n",
+    "imports_dict = {}\n",
+    "\n",
+    "minYear = int(min(imports_df['Year'].unique()))\n",
+    "maxYear = int(max(imports_df['Year'].unique()))\n",
+    "\n",
+    "for i, key in enumerate(ccDict):\n",
+    "    imports_dict[key] = {}\n",
+    "    \n",
+    "    for i in range(minYear, maxYear+1):\n",
+    "        imports_dict[key][str(i)] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Populate the dict with the data\n",
+    "for index, row in imports_df.iterrows():\n",
+    "    \n",
+    "    country = str(row[\"Reporter_Code\"])\n",
+    "    year = str(row[\"Year\"])\n",
+    "    value = row[\"Value\"]\n",
+    "    \n",
+    "    imports_dict[country][year] += value    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the dict to a json file\n",
+    "with open('arms_imports.json', 'w') as fp:\n",
+    "    json.dump(imports_dict, fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countryCodesFile = \"COW country codes.csv\"\n",
+    "\n",
+    "def buildCountryCodesDict():\n",
+    "    \"\"\"\n",
+    "        Reads all the country codes from the file and build a dictionary of their key and name\n",
+    "    \"\"\"\n",
+    "\n",
+    "    with open(countryCodesFile, 'r', newline='', encoding=\"utf-8\") as csvfile:\n",
+    "\n",
+    "        # init reader\n",
+    "        reader = csv.reader(csvfile, delimiter=',')\n",
+    "\n",
+    "        # Taking the header of the file + the index of useful columns:\n",
+    "        header = next(reader)\n",
+    "        ind_abb = header.index('StateAbb')\n",
+    "        ind_cc = header.index('CCode')\n",
+    "        ind_name = header.index('StateNme')\n",
+    "        \n",
+    "        # init dict\n",
+    "        dictionary = {}\n",
+    "        \n",
+    "        # go through file\n",
+    "        for row in reader:\n",
+    "            \n",
+    "            # get data\n",
+    "            abb = row[ind_abb]\n",
+    "            cc = row[ind_cc]\n",
+    "            name = row[ind_name]\n",
+    "            \n",
+    "            # append to dict\n",
+    "            dictionary[cc] = {\n",
+    "                \"abb\":abb,\n",
+    "                \"name\":name\n",
+    "            }\n",
+    "            \n",
+    "        return dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ccDict = buildCountryCodesDict()\n",
+    "\n",
+    "# Save the dict to a json file\n",
+    "with open('country_codes.json', 'w') as fp:\n",
+    "    json.dump(ccDict, fp)"
    ]
   },
   {
