--- a/analysis/nisat-2-preprocessing.ipynb
+++ b/analysis/nisat-2-preprocessing.ipynb
@@ -174,11 +174,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Print nbr of rows\n",
+    "print(\"Nbr of rows : \" + str(len(imports_df.index)))\n",
+    "\n",
+    "# Preview df\n",
+    "imports_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Only Keep last year\n",
     "def joinYear(year):\n",
     "    return year[-1]\n",
     "\n",
     "imports_df['Year'] = imports_df['Year'].apply(joinYear)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export cleaned CSV\n",
+    "output_path = \"data/nisat/preproc_arms_import.csv\"\n",
+    "imports_df.to_csv(output_path, sep=';')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataviz Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the african country dictionary\n",
+    "dict_path = \"data/output/african_countries.json\"\n",
+    "\n",
+    "with open(dict_path) as json_file:\n",
+    "    ccDict = json.load(json_file)"
    ]
   },
   {
@@ -213,7 +257,8 @@
     "    year = str(row[\"Year\"])\n",
     "    value = row[\"Value\"]\n",
     "    \n",
-    "    imports_dict[country][year] += value    "
+    "    if(country in imports_dict):\n",
+    "        imports_dict[country][year] += value"
    ]
   },
   {
@@ -223,7 +268,7 @@
    "outputs": [],
    "source": [
     "# Save the dict to a json file\n",
-    "with open('data/dataviz/arms_imports.json', 'w') as fp:\n",
+    "with open('data/output/arms_imports.json', 'w') as fp:\n",
     "    json.dump(imports_dict, fp)"
    ]
   },
@@ -233,87 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countryCodesFile = \"data/world/COW country codes.csv\"\n",
-    "\n",
-    "def buildCountryCodesDict():\n",
-    "    \"\"\"\n",
-    "        Reads all the country codes from the file and build a dictionary of their key and name\n",
-    "    \"\"\"\n",
-    "\n",
-    "    with open(countryCodesFile, 'r', newline='', encoding=\"utf-8\") as csvfile:\n",
-    "\n",
-    "        # init reader\n",
-    "        reader = csv.reader(csvfile, delimiter=',')\n",
-    "\n",
-    "        # Taking the header of the file + the index of useful columns:\n",
-    "        header = next(reader)\n",
-    "        ind_abb = header.index('StateAbb')\n",
-    "        ind_cc = header.index('CCode')\n",
-    "        ind_name = header.index('StateNme')\n",
-    "        \n",
-    "        # init dict\n",
-    "        dictionary = {}\n",
-    "        \n",
-    "        # go through file\n",
-    "        for row in reader:\n",
-    "            \n",
-    "            # get data\n",
-    "            abb = row[ind_abb]\n",
-    "            cc = row[ind_cc]\n",
-    "            name = row[ind_name]\n",
-    "            \n",
-    "            # append to dict\n",
-    "            dictionary[cc] = {\n",
-    "                \"abb\":abb,\n",
-    "                \"name\":name\n",
-    "            }\n",
-    "            \n",
-    "        return dictionary"
+    "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ccDict = buildCountryCodesDict()\n",
-    "\n",
-    "# Save the dict to a json file\n",
-    "with open('data/dataviz/country_codes.json', 'w') as fp:\n",
-    "    json.dump(ccDict, fp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print nbr of rows\n",
-    "print(\"Nbr of rows : \" + str(len(imports_df.index)))\n",
-    "\n",
-    "# Preview df\n",
-    "imports_df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Export\n",
-    "output_path = \"data/nisat/preproc_arms_import.csv\"\n",
-    "imports_df.to_csv(output_path, sep=';')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
