--- a/analysis/ucdp-1-preproc.ipynb
+++ b/analysis/ucdp-1-preproc.ipynb
@@ -67,6 +67,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataviz Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the african country dictionary\n",
+    "dict_path = \"data/output/african_countries.json\"\n",
+    "\n",
+    "with open(dict_path) as json_file:\n",
+    "    ccDict = json.load(json_file)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -77,9 +97,8 @@
     "\n",
     "minYear = int(min(clean_df['year'].unique()))\n",
     "maxYear = int(max(clean_df['year'].unique()))\n",
-    "locationDict = clean_df['location'].unique()\n",
     "\n",
-    "for i, key in enumerate(locationDict):\n",
+    "for i, key in enumerate(ccDict):\n",
     "    conflicts_dict[key] = {}\n",
     "    \n",
     "    for i in range(minYear, maxYear+1):\n",
@@ -98,7 +117,38 @@
     "    location = str(row[\"location\"])\n",
     "    year = str(row[\"year\"])\n",
     "    \n",
-    "    conflicts_dict[location][year] = 1"
+    "    if(len(location.split(\",\")) == 2):\n",
+    "        locations = location.split(\",\")\n",
+    "        \n",
+    "        for location in locations:\n",
+    "            \n",
+    "            found = False\n",
+    "            \n",
+    "            location = location.strip()\n",
+    "\n",
+    "            for i, key in enumerate(ccDict):\n",
+    "                if(ccDict[key]['name'] == location):\n",
+    "                    conflicts_dict[key][year] = 1\n",
+    "                    found = True\n",
+    "                    break\n",
+    "\n",
+    "            if(not found):\n",
+    "                print(location)\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        found = False\n",
+    "        \n",
+    "        location = location.strip()\n",
+    "    \n",
+    "        for i, key in enumerate(ccDict):\n",
+    "            if(ccDict[key]['name'] == location):\n",
+    "                conflicts_dict[key][year] = 1\n",
+    "                found = True\n",
+    "                break\n",
+    "\n",
+    "        if(not found):\n",
+    "            print(location)"
    ]
   },
   {
@@ -108,7 +158,7 @@
    "outputs": [],
    "source": [
     "# Save the dict to a json file\n",
-    "with open('data/dataviz/conflicts.json', 'w') as fp:\n",
+    "with open('data/output/conflicts.json', 'w') as fp:\n",
     "    json.dump(conflicts_dict, fp)"
    ]
   },
