mil exp and pers

--- a/analysis/nisat-2-preprocessing.ipynb
+++ b/analysis/nisat-2-preprocessing.ipynb
@@ -55,7 +55,10 @@
     "raw_df = pd.read_csv(path, sep=',', usecols = ['Reporter_Code','Partner_Code','ImportOrExport','Year','Weapons_Type','Value','Reliability','Accuracy'])\n",
     "\n",
     "# Print nbr of rows\n",
-    "print(\"Nbr of rows : \" + str(len(raw_df.index)))"
+    "print(\"Nbr of rows : \" + str(len(raw_df.index)))\n",
+    "\n",
+    "# Preview df\n",
+    "raw_df.head(10)"
    ]
   },
   {
