--- a/analysis/regression.ipynb
+++ b/analysis/regression.ipynb
@@ -17,6 +17,7 @@
     "import matplotlib.pyplot as plt\n",
     "from joblib import dump, load\n",
     "from glob import glob\n",
+    "from joblib import dump, load\n",
     "\n",
     "from tqdm import tqdm_notebook as tqdm\n",
     "\n",
@@ -372,6 +373,22 @@
     "        success += 1\n",
     "        \n",
     "print(\"Validation Accuracy = \" + str(success/len(train_Y)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dump(rdf_classifier, 'data/model/model.joblib') "
    ]
   },
   {
