water and surface

--- a/analysis/accuracy.ipynb
+++ b/analysis/accuracy.ipynb
@@ -38,6 +38,7 @@
    "outputs": [],
    "source": [
     "success = 0\n",
+    "ave_prob = 0.0\n",
     "nbrof = 0\n",
     "minYear = 1962\n",
     "maxYear = 2012\n",
@@ -45,18 +46,32 @@
     "    for year in range(minYear, maxYear+1):\n",
     "        \n",
     "        conflict = conflicts[key][str(year)]\n",
-    "        prediction = round(float(predictions[str(key)][str(year)]))\n",
+    "        prediction = float(predictions[str(key)][str(year)])\n",
+    "        bin_pred = round(prediction)\n",
     "        \n",
-    "        \n",
-    "        nbrof += 1\n",
+    "        if(conflict == 1):\n",
     "            \n",
-    "        if(prediction == conflict):\n",
-    "            success += 1\n",
-    "        elif(year < maxYear and predictions[str(key)][str(year+1)] == conflict):\n",
-    "            success += 1\n",
+    "            nbrof += 1\n",
+    "            \n",
+    "            if(bin_pred == conflict and prediction > 0.8):\n",
+    "                success += 1\n",
+    "            \n",
+    "            \n",
+    "#         if(prediction == conflict):\n",
+    "#             nbrof += 1\n",
+    "#             success += 1\n",
+    "#         elif(year < maxYear and predictions[str(key)][str(year+1)] == conflict):\n",
+    "#             success += 1\n",
     "\n",
     "print(\"Accuracy \" + str(success/nbrof))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
