--- a/analysis/conflicts.ipynb
+++ b/analysis/conflicts.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# Only relevant columns\n",
-    "clean_df = raw_df[['location', 'year', 'type_of_conflict', 'region']]\n",
+    "clean_df = raw_df[['location', 'year', 'type_of_conflict', 'region', 'intensity_level']]\n",
     "\n",
     "# Remove rows with NaN\n",
     "clean_df = clean_df.dropna(subset=['location', 'year'])\n",
@@ -48,12 +48,17 @@
     "# We only keep Africa\n",
     "def onlyAfrica(x):\n",
     "    if(len(x.split(\",\")) > 1):\n",
-    "        return '4' in str(x)\n",
+    "        return ('4' in str(x))\n",
     "    else:\n",
-    "        return int(x) == 4\n",
+    "        return (int(x) == 4)\n",
     "        \n",
     "clean_df = clean_df[clean_df['region'].apply(lambda x: onlyAfrica(x))]\n",
     "clean_df = clean_df.drop(columns=['region'])\n",
+    "\n",
+    "# We only keep major conflicts       \n",
+    "#clean_df = clean_df[clean_df['intensity_level'].apply(lambda x: int(x) == 2)]\n",
+    "clean_df = clean_df.drop(columns=['intensity_level'])\n",
+    "\n",
     "\n",
     "# We remove extrasystemic conflicts\n",
     "clean_df = clean_df[clean_df['type_of_conflict'].apply(lambda x: int(x) != 1)]\n",
