--- a/analysis/figures.ipynb
+++ b/analysis/figures.ipynb
@@ -29,12 +29,12 @@
    "outputs": [],
    "source": [
     "# Extract single tree\n",
-    "estimator = clf.estimators_[5]\n",
+    "estimator = clf.estimators_[0]\n",
     "\n",
     "# Export as dot file\n",
     "export_graphviz(estimator, out_file='tree.dot', \n",
-    "                feature_names = iris.feature_names,\n",
-    "                class_names = iris.target_names,\n",
+    "                feature_names = ['Arms_Imports', 'Mil_Exp', 'Mil_Pers', 'Population', 'Water', 'Surface'],\n",
+    "                class_names = ['No', \"Yes\"],\n",
     "                rounded = True, proportion = False, \n",
     "                precision = 2, filled = True)\n"
    ]
@@ -47,7 +47,7 @@
    "source": [
     "# Convert to png using system command (requires Graphviz)\n",
     "from subprocess import call\n",
-    "call(['dot', '-Tpng', 'tree.dot', '-o', 'tree.png', '-Gdpi=600'])\n",
+    "call(['dot', '-Tpng', 'tree.dot', '-o', 'tree.png', '-Gdpi=200'])\n",
     "\n",
     "# Display in jupyter notebook\n",
     "from IPython.display import Image\n",
