--- a/analysis/training.ipynb
+++ b/analysis/training.ipynb
@@ -436,7 +436,7 @@
    "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense"
+    "from keras.layers import Dense, Dropout"
    ]
   },
   {
@@ -447,7 +447,10 @@
    "source": [
     "# Define model\n",
     "model = Sequential()\n",
-    "model.add(Dense(60, input_dim=len(features), activation= \"relu\"))\n",
+    "model.add(Dense(100, input_dim=len(features), activation= \"relu\"))\n",
+    "model.add(Dense(60, activation= \"relu\"))\n",
+    "model.add(Dropout(rate=0.3))\n",
+    "model.add(Dense(60, activation= \"relu\"))\n",
     "model.add(Dense(30, activation= \"relu\"))\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
     "model.summary() #Print model Summary"
@@ -472,7 +475,7 @@
    "outputs": [],
    "source": [
     "# Fit Model\n",
-    "history = model.fit(train_X_n, train_Y, batch_size=128, epochs=60, verbose=0)"
+    "history = model.fit(train_X_n, train_Y, epochs=125, verbose=0)"
    ]
   },
   {
@@ -582,7 +585,7 @@
     "    \n",
     "    # get prediction from the models\n",
     "    rdf_preds = rdf_classifier.predict_proba(x)\n",
-    "    cnn_preds = cnn_classifier.predict(x_n)\n",
+    "    cnn_preds = model.predict(x_n)\n",
     "    \n",
     "    # init array\n",
     "    predictions = []\n",
@@ -678,6 +681,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataviz Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(features)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -693,49 +712,6 @@
    "outputs": [],
    "source": [
     "model = Model(0.9,0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_arr = np.array(X)\n",
-    "y_arr = np.array(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = model.predict(X_arr)\n",
-    "success = 0\n",
-    "for i, pred in enumerate(predictions):\n",
-    "    \n",
-    "    # count successes\n",
-    "    if(round(pred) == y_arr[i]):\n",
-    "        success += 1\n",
-    "\n",
-    "print(\"Validation Accuracy = \" + str(success/len(predictions)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Dataviz Output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(features)"
    ]
   },
   {
