--- a/analysis/gdp.ipynb
+++ b/analysis/gdp.ipynb
@@ -21,27 +21,27 @@
    "outputs": [],
    "source": [
     "# Path to dataset\n",
-    "path = \"data/owid/military-expenditure-as-a-share-of-gdp.csv\"\n",
+    "path = \"data/gdp/API_NY.GDP.MKTP.CD_DS2_en_csv_v2_511444.csv\"\n",
     "\n",
     "# We import the data\n",
-    "raw_df = pd.read_csv(path, sep=',')\n",
+    "raw_df = pd.read_csv(path, sep=',', index_col=0)\n",
     "\n",
-    "# Drop\n",
-    "raw_df = raw_df.drop(columns=['Code'])\n",
+    "# remove the country code\n",
+    "raw_df = raw_df.drop(columns=['Country Code'])\n",
     "\n",
     "# Print nbr of rows\n",
     "print(\"Nbr of rows : \" + str(len(raw_df.index)))\n",
     "\n",
-    "# reshape table\n",
-    "raw_df = raw_df.pivot(index='Year', columns='Entity', values='Military expenditure as a share of GDP (OWID calculated based on NMC, COW & SIPRI (2017)) (%)')\n",
+    "# Transpose\n",
+    "raw_df = raw_df.transpose()\n",
     "\n",
     "# fill nan with column average\n",
     "raw_df = raw_df.replace(0.0, np.NaN)\n",
     "raw_df = raw_df.replace(0.0, raw_df.mean(axis=0))\n",
     "raw_df = raw_df.fillna(raw_df.mean(axis=0), axis=0)\n",
     "\n",
-    "# Preview df\n",
-    "raw_df.tail(10)"
+    "# preview\n",
+    "raw_df.head(10)"
    ]
   },
   {
@@ -81,16 +81,16 @@
    "outputs": [],
    "source": [
     "# Init a dict that will contain the total value of arms import per year per country\n",
-    "mil_exp_dict = {}\n",
+    "population_dict = {}\n",
     "\n",
     "minYear = int(min(years))\n",
     "maxYear = int(max(years))\n",
     "\n",
     "for i, key in enumerate(ccDict):\n",
-    "    mil_exp_dict[key] = {}\n",
+    "    population_dict[key] = {}\n",
     "    \n",
     "    for year in range(minYear, maxYear+1):\n",
-    "        mil_exp_dict[key][str(year)] = 0"
+    "        population_dict[key][year] = 0"
    ]
   },
   {
@@ -105,19 +105,11 @@
     "    # get name\n",
     "    name = ccDict[key]['name']\n",
     "    \n",
-    "    # name adjust\n",
-    "    if(name == \"Ivory Coast\"):\n",
-    "        name = \"Cote d'Ivoire\"\n",
-    "    elif(name == \"Republic of the Congo\"):\n",
-    "        name = \"Congo\"\n",
-    "    elif(name == \"Democratic Republic of the Congo\"):\n",
-    "        name = \"Democratic Republic of Congo\"\n",
-    "    \n",
     "    if(name in raw_df.columns):\n",
     "        \n",
     "        # go through years\n",
     "        for year in range(minYear, maxYear+1):\n",
-    "            mil_exp_dict[key][year] = raw_df[name][year]\n",
+    "            population_dict[key][year] = raw_df[name][str(year)]\n",
     "            \n",
     "    else:\n",
     "        print(name)"
@@ -130,8 +122,8 @@
    "outputs": [],
    "source": [
     "# Save the dict to a json file\n",
-    "with open('data/output/mil_exp.json', 'w') as fp:\n",
-    "    json.dump(mil_exp_dict, fp)"
+    "with open('data/output/gdp.json', 'w') as fp:\n",
+    "    json.dump(population_dict, fp)"
    ]
   },
   {
