--- a/analysis/training.ipynb
+++ b/analysis/training.ipynb
@@ -63,6 +63,9 @@
     "with open('data/output/surface.json') as json_file:\n",
     "    surface = json.load(json_file)\n",
     "    \n",
+    "with open('data/output/gdp.json') as json_file:\n",
+    "    gdp = json.load(json_file)\n",
+    "    \n",
     "    \n",
     "with open('data/output/conflicts.json') as json_file:\n",
     "    conflicts = json.load(json_file)"
@@ -98,6 +101,7 @@
     "            'Arms_Imports':int(arms_imports[key][str(year)]),\n",
     "            'Water':float(water[key][str(year)]),\n",
     "            'Surface':float(surface[key][str(year)]),\n",
+    "            'GDP':float(gdp[key][str(year)]),\n",
     "            'Conflict':conflicts[key][str(year)]\n",
     "        }\n",
     "        \n",
@@ -225,7 +229,7 @@
    "outputs": [],
    "source": [
     "# Split features/label\n",
-    "features = ['Arms_Imports', 'Mil_Exp', 'Mil_Pers', 'Population', 'Water', 'Surface']\n",
+    "features = ['Arms_Imports', 'Mil_Exp', 'Mil_Pers', 'Population', 'Water', 'Surface', 'GDP']\n",
     "label = ['Conflict']\n",
     "X = balanced_df[features]\n",
     "y = balanced_df[label]"
@@ -693,15 +697,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from model import Model"
    ]
   },
@@ -738,6 +733,7 @@
     "             int(population[key][str(year)]), \n",
     "             float(water[key][str(year)]),\n",
     "             float(surface[key][str(year)]),\n",
+    "             float(gdp[key][str(year)])\n",
     "        ]\n",
     "        \n",
     "        # predict with probabibility\n",
