--- a/analysis/water.ipynb
+++ b/analysis/water.ipynb
@@ -35,8 +35,12 @@
     "# Transpose\n",
     "raw_df = raw_df.transpose()\n",
     "\n",
-    "# fill nan\n",
-    "raw_df = raw_df.fillna(0)\n",
+    "# fill nan with column average\n",
+    "raw_df = raw_df.replace(0.0, np.NaN)\n",
+    "raw_df = raw_df.replace(0.0, raw_df.mean(axis=0))\n",
+    "raw_df = raw_df.fillna(raw_df.mean(axis=0), axis=0)\n",
+    "\n",
+    "raw_df = raw_df.replace(np.NaN, 0.0)\n",
     "\n",
     "# preview\n",
     "raw_df.head(10)"
@@ -87,8 +91,8 @@
     "for i, key in enumerate(ccDict):\n",
     "    population_dict[key] = {}\n",
     "    \n",
-    "    for i in range(minYear, maxYear+1):\n",
-    "        population_dict[key][str(i)] = 0"
+    "    for year in range(minYear, maxYear+1):\n",
+    "        population_dict[key][year] = 0"
    ]
   },
   {
@@ -106,8 +110,8 @@
     "    if(name in raw_df.columns):\n",
     "        \n",
     "        # go through years\n",
-    "        for i, year in enumerate(years):    \n",
-    "            population_dict[key][year] = raw_df[name][i]\n",
+    "        for year in range(minYear, maxYear+1):   \n",
+    "            population_dict[key][year] = raw_df[name][str(year)]\n",
     "            \n",
     "    else:\n",
     "        print(name)"
