--- a/analysis/conflicts.ipynb
+++ b/analysis/conflicts.ipynb
@@ -64,6 +64,7 @@
     "clean_df = clean_df[clean_df['type_of_conflict'].apply(lambda x: int(x) != 1)]\n",
     "clean_df = clean_df.drop(columns=['type_of_conflict'])\n",
     "\n",
+    "\n",
     "# Print nbr of rows\n",
     "print(\"Nbr of rows : \" + str(len(clean_df.index)))\n",
     "\n",
@@ -106,8 +107,8 @@
     "for i, key in enumerate(ccDict):\n",
     "    conflicts_dict[key] = {}\n",
     "    \n",
-    "    for i in range(minYear, maxYear+1):\n",
-    "        conflicts_dict[key][str(i)] = 0"
+    "    for year in range(minYear, maxYear+1):\n",
+    "        conflicts_dict[key][str(year)] = 0"
    ]
   },
   {
