--- a/analysis/owid-1-milpers.ipynb
+++ b/analysis/owid-1-milpers.ipynb
@@ -26,11 +26,22 @@
     "# We import the data\n",
     "raw_df = pd.read_csv(path, sep=',')\n",
     "\n",
+    "# Drop\n",
+    "raw_df = raw_df.drop(columns=['Code'])\n",
+    "\n",
     "# Print nbr of rows\n",
     "print(\"Nbr of rows : \" + str(len(raw_df.index)))\n",
     "\n",
+    "# reshape table\n",
+    "raw_df = raw_df.pivot(index='Year', columns='Entity', values='Military personnel as share of the population COW (2017) (share of the population)')\n",
+    "\n",
+    "# fill nan with column average\n",
+    "raw_df = raw_df.replace(0.0, np.NaN)\n",
+    "raw_df = raw_df.replace(0.0, raw_df.mean(axis=0))\n",
+    "raw_df = raw_df.fillna(raw_df.mean(axis=0), axis=0)\n",
+    "\n",
     "# Preview df\n",
-    "raw_df.head(10)"
+    "raw_df.tail(10)"
    ]
   },
   {
@@ -39,17 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Only relevant columns\n",
-    "clean_df = raw_df[['Entity', 'Year', 'Military personnel as share of the population COW (2017) (share of the population)']]\n",
-    "\n",
-    "# Remove rows with NaN\n",
-    "clean_df = clean_df.dropna()\n",
-    "\n",
-    "# Print nbr of rows\n",
-    "print(\"Nbr of rows : \" + str(len(clean_df.index)))\n",
-    "\n",
-    "# Preview df\n",
-    "clean_df.head(10)"
+    "# Get years as array\n",
+    "years = np.array(raw_df[raw_df.columns[0]].keys())"
    ]
   },
   {
@@ -81,14 +83,14 @@
     "# Init a dict that will contain the total value of arms import per year per country\n",
     "mil_pers_dict = {}\n",
     "\n",
-    "minYear = int(min(clean_df['Year'].unique()))\n",
-    "maxYear = int(max(clean_df['Year'].unique()))\n",
+    "minYear = int(min(years))\n",
+    "maxYear = int(max(years))\n",
     "\n",
     "for i, key in enumerate(ccDict):\n",
     "    mil_pers_dict[key] = {}\n",
     "    \n",
-    "    for i in range(minYear, maxYear+1):\n",
-    "        mil_pers_dict[key][str(i)] = 0"
+    "    for year in range(minYear, maxYear+1):\n",
+    "        mil_pers_dict[key][str(year)] = 0"
    ]
   },
   {
@@ -98,22 +100,27 @@
    "outputs": [],
    "source": [
     "# Populate the dict with the data\n",
-    "for index, row in clean_df.iterrows():\n",
+    "for i, key in enumerate(ccDict):\n",
     "    \n",
-    "    entity = str(row[\"Entity\"])\n",
-    "    year = str(row[\"Year\"])\n",
-    "    mil_pers = str(row[\"Military personnel as share of the population COW (2017) (share of the population)\"])\n",
+    "    # get name\n",
+    "    name = ccDict[key]['name']\n",
     "    \n",
-    "    found = False\n",
-    "\n",
-    "    for i, key in enumerate(ccDict):\n",
-    "        if(ccDict[key]['name'] == entity):\n",
-    "            mil_pers_dict[key][year] = mil_pers\n",
-    "            found = True\n",
-    "            break\n",
-    "\n",
-    "    if(not entity):\n",
-    "        print(entity)"
+    "    # name adjust\n",
+    "    if(name == \"Ivory Coast\"):\n",
+    "        name = \"Cote d'Ivoire\"\n",
+    "    elif(name == \"Republic of the Congo\"):\n",
+    "        name = \"Congo\"\n",
+    "    elif(name == \"Democratic Republic of the Congo\"):\n",
+    "        name = \"Democratic Republic of Congo\"\n",
+    "    \n",
+    "    if(name in raw_df.columns):\n",
+    "        \n",
+    "        # go through years\n",
+    "        for year in range(minYear, maxYear+1):\n",
+    "            mil_pers_dict[key][year] = raw_df[name][year]\n",
+    "            \n",
+    "    else:\n",
+    "        print(name)"
    ]
   },
   {
