--- a/analysis/surface.ipynb
+++ b/analysis/surface.ipynb
@@ -35,9 +35,6 @@
     "# Transpose\n",
     "raw_df = raw_df.transpose()\n",
     "\n",
-    "# fill nan\n",
-    "raw_df = raw_df.fillna(0)\n",
-    "\n",
     "# preview\n",
     "raw_df.head(10)"
    ]
@@ -77,8 +74,8 @@
     "for i, key in enumerate(ccDict):\n",
     "    population_dict[key] = {}\n",
     "    \n",
-    "    for i in range(minYear, maxYear+1):\n",
-    "        population_dict[key][str(i)] = 0"
+    "    for year in range(minYear, maxYear+1):\n",
+    "        population_dict[key][year] = 0"
    ]
   },
   {
